# emmc-protocol-copilot

./: .dockerignore  .env.example  .gitignore  Claude.md  Dockerfile  GIT_CHECKLIST.md  README.md  README_DOCKER.md  app.py  build_vector_db.py  chainlit.md  data_processing_v3.py  docker-compose.yml  pyproject.toml  rag_chat_v3.py  requirements.txt  start.sh  streamlit_app.py  test_api_client.py
app/: main.py  models.py  rag_engine.py
data/eval/: agent_responses.jsonl  dense_rag_responses.jsonl  ground_truth.jsonl  hybrid_rag_responses.jsonl
docs/: agent_full_test_results.md  agent_full_test_results_v2.md  agent_vs_notebooklm_analysis.md  chunking_design.md  dev_process_records.md  eMMC_Agent_技术选型文档.md  hybrid_rag_test_results.md  hybrid_rag_test_results_v2.md  known_issues.md  notebook_lm_compare_agent.md  phase1_data_pipeline_design.md  phase2_rag_design.md  phase3_agent_design.md  phase3_agent_implementation.md  phase3_test_plan.md  phase4_eval_design.md  phase5_frontend_design.md  phase5_test_plan.md  rag_full_test_results.md  ragas_eval_results.md  retrieval_test_v51.md  tmp.md
src/emmc_copilot/: __init__.py
src/emmc_copilot/agent/: __init__.py  cli.py  graph.py  prompt.py  state.py  tools.py
src/emmc_copilot/evaluation/: __init__.py  dataset.py  report.py  runner.py
src/emmc_copilot/ingestion/: __init__.py  classifier.py  cli.py  parser.py  pipeline.py  (+2 more)
tests/: test_watermark_cleaning.py
tools/: run_multiturn_test.py  run_ragas_eval.py  test_agent_pipeline.py  test_rag_pipeline.py  verify_retrieval.py
tools/inspector/: index.html  main.js  style.css
(+18 files in other folders)
