[project]
name = "emmc-copilot"
version = "0.1.0"
description = "eMMC Protocol Intelligent Q&A Agent (RAG + LangGraph)"
requires-python = "==3.11.*"
dependencies = [
    # LangChain ecosystem
    "langchain>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",   # DeepSeek is OpenAI-compatible
    "langgraph>=0.2,<0.3",
    # Document parsing
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    # Vector database (dev: Chroma)
    "chromadb>=0.5",
    # Embedding model: BGE-M3
    "FlagEmbedding>=1.2",
    # Frontend
    "chainlit>=1.2",
    # Utilities
    "python-dotenv>=1.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    # Evaluation
    "ragas>=0.1",
    # Observability
    "langsmith>=0.1",
    # Testing
    "pytest>=8",
    "pytest-asyncio>=0.23",
    # Notebooks
    "jupyter>=1.0",
    "ipykernel>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emmc_copilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
